// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Sticky > Sticky baseVue demo works fine 1`] = `
<div
  class="t-sticky"
  data-v-1c640d71=""
  style="height: 0px;"
>
  <div
    class="t-sticky__content"
    style="z-index: 99; position: fixed; top: 0px;"
  >
    
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle common-button"
      data-v-1c640d71=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        基础吸顶
        
      </span>
      <!---->
    </button>
    
  </div>
</div>
`;

exports[`Sticky > Sticky containerVue demo works fine 1`] = `
<div
  class="sticky-demo"
  data-v-e0d52be3=""
  id="container"
>
  <div
    class="t-sticky"
    data-v-e0d52be3=""
    style="height: 0px;"
  >
    <div
      class="t-sticky__content"
      style="z-index: 99; position: fixed; top: 0px;"
    >
      
      <button
        aria-disabled="false"
        class="t-button t-button--size-large t-button--base t-button--default t-button--rectangle common-button green-button"
        data-v-e0d52be3=""
        role="button"
        type="button"
      >
        <!---->
        <span
          class="t-button__content"
        >
          
          指定容器
          
        </span>
        <!---->
      </button>
      
    </div>
  </div>
</div>
`;

exports[`Sticky > Sticky mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo sticky-demo-container"
  data-v-8783f7c8=""
>
  <h1
    class="title"
    data-v-8783f7c8=""
  >
    Sticky 吸顶
  </h1>
  <p
    class="summary"
    data-v-8783f7c8=""
  >
    用于常驻页面顶部的信息、操作展示。
  </p>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-8783f7c8=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        基础吸顶
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-sticky"
        data-v-1c640d71=""
        data-v-8783f7c8=""
        style="height: 0px;"
      >
        <div
          class="t-sticky__content"
          style="z-index: 99; position: fixed; top: 0px;"
        >
          
          <button
            aria-disabled="false"
            class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle common-button"
            data-v-1c640d71=""
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              
              基础吸顶
              
            </span>
            <!---->
          </button>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-8783f7c8=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        吸顶距离
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-sticky"
        data-v-8783f7c8=""
        data-v-dc78acf3=""
        style="height: 0px;"
      >
        <div
          class="t-sticky__content"
          style="z-index: 99; position: fixed; top: 40px;"
        >
          
          <button
            aria-disabled="false"
            class="t-button t-button--size-large t-button--base t-button--danger t-button--rectangle common-button"
            data-v-dc78acf3=""
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              
              吸顶距离
              
            </span>
            <!---->
          </button>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-8783f7c8=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        指定容器
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="sticky-demo"
        data-v-8783f7c8=""
        data-v-e0d52be3=""
        id="container"
      >
        <div
          class="t-sticky"
          data-v-e0d52be3=""
          style="height: 0px;"
        >
          <div
            class="t-sticky__content"
            style="z-index: 99; position: fixed; top: 0px;"
          >
            
            <button
              aria-disabled="false"
              class="t-button t-button--size-large t-button--base t-button--default t-button--rectangle common-button green-button"
              data-v-e0d52be3=""
              role="button"
              type="button"
            >
              <!---->
              <span
                class="t-button__content"
              >
                
                指定容器
                
              </span>
              <!---->
            </button>
            
          </div>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Sticky > Sticky offsetVue demo works fine 1`] = `
<div
  class="t-sticky"
  data-v-dc78acf3=""
  style="height: 0px;"
>
  <div
    class="t-sticky__content"
    style="z-index: 99; position: fixed; top: 40px;"
  >
    
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--danger t-button--rectangle common-button"
      data-v-dc78acf3=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        吸顶距离
        
      </span>
      <!---->
    </button>
    
  </div>
</div>
`;
